@@ -6,6 +6,9 @@ Copyright (C) 1998-2014 by the Free Software Foundation, Inc.
 Here is a history of user visible changes to Mailman.
 
 2.1.19 (xx-xxx-xxxx)
+
+    - If checking DNS for dmarc_moderation_action and DNS lookup is not
+      available, log it.  (LP: #1324541)
  
   Bug fixes and other patches
 
